Swap out the authentication service for a token cache as the v1 auth is being shut down so the method used here won't work anymore

--- a/EsiSearchProxy/appsettings.Development.json
+++ b/EsiSearchProxy/appsettings.Development.json
@@ -6,11 +6,6 @@
     }
   },
   "Esi": {
-    "SSOUrl": "https://login.eveonline.com",
-    "BaseUrl": "https://esi.evetech.net",
-    "ClientId": "",
-    "ClientSecret": "",
-    "CharacterId": 0,
-    "CharacterRefreshToken": ""
+    "BaseUrl": "https://esi.evetech.net"
   }
 }
